Updated to JavaFX 24